--- a/configs/endless_tmaze.yaml
+++ b/configs/endless_tmaze.yaml
@@ -25,10 +25,10 @@ model:
 # Параметры трансформера (GTrXL)
 transformer:
   num_blocks: 2
-  embed_dim: 256
+  embed_dim: 512
   num_heads: 4
   memory_length: 96
-  positional_encoding: ""       # Опции: "relative", "learned", ""
+  positional_encoding: "learned"       # Опции: "relative", "learned", ""
   layer_norm: "pre"             # Опции: "pre", "post"
   gtrxl: True
   gtrxl_bias: 0.2
